TFP-4518: Advarsel til saksbehandler at brukeren mangler adresse.